assets/css/style.css
blockquote {
    position: relative;
    margin: 1.5em 0;
    padding: 1.2em 2em;
    background: #BEBAAA;
    border-radius: 8px;
    font-style: italic;
    color: #333;
    line-height: 1.6;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

blockquote::before {
    content: '“';
    position: absolute;
    left: 0em;
    top: -0.1em;
    font-size: 3em;
    color: black;
    opacity: 0.3;
}

blockquote p {
    margin: 0;
    font-size: 1.1em;
}

code {
    background-color: #BEBEBE;
}

table {
    margin-left: auto;
    margin-right: auto;
    border: 1px solid black;
    border-collapse: collapse;
    border-spacing: 0;
}

td, th {
    padding: 6px;
    border: 1px solid black;
}

figure {
    text-align: center;
}

hr#navbar-divider {
    border: none;
    border-top: 2px solid black;
}

nav#navbar ul {
    display: flex;
    flex: 2;
    list-style-type: none;
}

nav#navbar li {
    text-align: center;
    flex: 1;
}

/* These were stripped from oc-csl output in body, and placed here
   where it's more appropriate. */
.csl-left-margin {
    float: left;
    padding-right: 0em;
}
.csl-right-inline {
    margin: 0 0 0 1em;
}

header {
    text-align: center;
}

body {
    background-color: lightgray;
    margin: 0 auto;
    max-width: 1200px;
    padding: 0 15px;
}

pre[class^="src"] {
    border: 2px dotted purple;
    background-color: #BEBEBE;
}

span.tag {
    background-color: lightgray;
    font-family: monospace;
    padding: 2px;
    font-size: 80%;
    font-weight: normal;
}

pre.example::before {
    content: "⟹ ";
    position: absolute;
    left: 0;
}
pre.example {
    padding-left: 3em;
    background-color: inherit;
    border: none;
    position: relative;
    top: -20px;
}

span.tag > span {
    display: inline-block;
    padding: 1px 2px;
    background-color: #888888;
    color: white;
    text-align: center;
    border: 2px solid #666666;
    border-radius: 5px;
    margin-right: 2px;
}

a {
    position: relative;
    text-decoration: none;
}

[id^="mjx-eqn"]:target {
    scroll-margin-top: 100px;
}

[id^="mjx-eqn"]:target::after {
    content: '↓';
    font-size: 30px;
    color: red;
    position: absolute;
    top: -20px;
    left: 50%;
    transform: translateX(-50%);
}

a[id^="citeproc"] {
    border: transparent !important;
}

a[href^="#citeproc_bib_item"] {
    border: 2px solid orange !important;
}

a:has(img) {
    border: transparent !important;
}

mjx-math a {
    border: transparent !important;
}

div.csl-left-margin {
    margin-right: 5px;
}

div.status {
    display: inline-block;
    border: 2px solid black;
}

span.subtitle {
    font-size: 80%;
}

div#sidebar {
    position: fixed;
    top: 0;
    right: 0;
    padding: 20px;
    background-color: #fefefe;
    border: 2px solid black;
    border-top: none;
    width: fit-content;
    cursor: pointer;
}

div#sidebar h2 {
    text-align: center;
}

div#sidebar h2:hover {
    text-decoration: underline;
}

div#sidebar h2::before {
    content: var(--sidebar-arrow, "⇓ ");
}

.sidebar {
    display: none;
    margin-top: 20px;
    right: 0;
    padding: 5px;
}

.sidebar ul {
    list-style-type: none;
}

.sidebar .blog-entry-date {
    font-style: italic;
}

#content { max-width: 60em; margin: auto; }
.title  { text-align: center;
          margin-bottom: .2em; }
.subtitle { text-align: center;
            font-size: medium;
            font-weight: bold;
            margin-top:0; }
.todo   { font-family: monospace; color: red; }
.done   { font-family: monospace; color: green; }
.priority { font-family: monospace; color: orange; }
.timestamp { color: #b43757; }
.timestamp-kwd { color: #5f9ea0; }
.org-right  { margin-left: auto; margin-right: 0px;  text-align: right; }
.org-left   { margin-left: 0px;  margin-right: auto; text-align: left; }
.org-center { margin-left: auto; margin-right: auto; text-align: center; }
.underline { text-decoration: underline; }
p.verse { margin-left: 3%; }
pre {
    border: 1px solid #e6e6e6;
    border-radius: 3px;
    background-color: #f2f2f2;
    padding: 8pt;
    font-family: monospace;
    overflow: auto;
    margin: 1.2em;
}
pre.src {
    position: relative;
    overflow: auto;
}
div.org-src-container:has(pre.src)::before {
    position: relative;
    top: 1em;
    padding: 3px;
    color: #555;
    background-color: #f2f2f299;
    z-index: 2;
}
/* Languages per Org manual */
div.org-src-container:has(pre.src.src-asymptote)::before { content: 'Asymptote'; }
div.org-src-container:has(pre.src.src-awk)::before { content: 'Awk'; }
div.org-src-container:has(pre.src.src-authinfo)::before { content: 'Authinfo'; }
div.org-src-container:has(pre.src.src-c)::before { content: 'C'; }
div.org-src-container:has(pre.src.src-C)::before { content: 'C'; }
/* pre.src-C++ doesn't work in CSS */
div.org-src-container:has(pre.src.src-clojure)::before { content: 'Clojure'; }
div.org-src-container:has(pre.src.src-css)::before { content: 'CSS'; }
div.org-src-container:has(pre.src.src-D)::before { content: 'D'; }
div.org-src-container:has(pre.src.src-ditaa)::before { content: 'ditaa'; }
div.org-src-container:has(pre.src.src-dot)::before { content: 'Graphviz'; }
div.org-src-container:has(pre.src.src-calc)::before { content: 'Emacs Calc'; }
div.org-src-container:has(pre.src.src-elisp)::before { content: 'Emacs Lisp'; }
div.org-src-container:has(pre.src.src-emacs-lisp)::before { content: 'Emacs Lisp'; }
div.org-src-container:has(pre.src.src-fortran)::before { content: 'Fortran'; }
div.org-src-container:has(pre.src.src-gnuplot)::before { content: 'gnuplot'; }
div.org-src-container:has(pre.src.src-haskell)::before { content: 'Haskell'; }
div.org-src-container:has(pre.src.src-hledger)::before { content: 'hledger'; }
div.org-src-container:has(pre.src.src-java)::before { content: 'Java'; }
div.org-src-container:has(pre.src.src-js)::before { content: 'Javascript'; }
div.org-src-container:has(pre.src.src-latex)::before { content: 'LaTeX'; }
/* ... */

